# BBQVideo

./: .gitignore  README.md  build.gradle  config.gradle  dependencies.gradle  gradle.properties  settings.gradle
app/: build.gradle
player/: CMakeLists.txt  build.gradle
player/app/asan/res/lib/armeabi-v7a/: wrap.sh
player/app/asan/res/lib/x86/: wrap.sh
player/app/asan/res/lib/x86_64/: wrap.sh
player/src/androidTest/java/com/yj/player/: ExampleInstrumentedTest.kt
player/src/main/: AndroidManifest.xml
player/src/main/assets/shader/: fragmentForYUV.glsl  vertexForYUV.glsl
player/src/main/cpp/: CMakeLists.txt  onLoad.cpp  onLoad.h
player/src/main/cpp/decode/: BaseHardDecoder.cpp  BaseHardDecoder.h  DecodeStateMachine.cpp  DecodeStateMachine.h  PlayStatusCallback.cpp  PlayStatusCallback.h  VideoDecoder.cpp  VideoDecoder.h  VideoH264Decoder.cpp  VideoH264Decoder.h  VideoHardDecoder.cpp  VideoHardDecoder.h
player/src/main/cpp/decode/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioHardDecoder.cpp  AudioHardDecoder.h  AudioSoftDecoder.cpp  AudioSoftDecoder.h
player/src/main/cpp/decode/video/: VideoDecoder.cpp  VideoDecoder.h  VideoHardDecoder.cpp  VideoHardDecoder.h  VideoSoftDecoder.cpp  VideoSoftDecoder.h
player/src/main/cpp/encode/: VideoEncoder.cpp  VideoEncoder.h  VideoH264Encoder.cpp  VideoHardEncoder.cpp  VideoHardEncoder.h
player/src/main/cpp/encode/audio/: AudioEncoder.cpp  AudioEncoder.h
player/src/main/cpp/encode/video/: VideoH264Encoder.h  VideoHardEncoder.cpp  VideoHardEncoder.h
player/src/main/cpp/engine/: AudioDataSource.cpp  AudioDataSource.h  AudioEngine.cpp  AudioEngine.h  DefaultDataCallback.h  DefaultErrorCallback.h
player/src/main/cpp/ffmpeg/: readme.md
player/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
player/src/main/cpp/ffmpeg/include/libavutil/: avutil.h
player/src/main/cpp/filter/: BaseFilter.cpp  BaseFilter.h  CameraFilter.cpp  CameraFilter.h  TriangleFilter.cpp  TriangleFilter.h  VideoFilter.cpp  VideoFilter.h
player/src/main/cpp/frame/: VideoFrame.cpp  VideoFrame.h
player/src/main/cpp/fsm/: FiniteStateMachine.cpp  FiniteStateMachine.h
player/src/main/cpp/glm-master/: CMakeLists.txt
player/src/main/cpp/glm-master/doc/: man.doxy
player/src/main/cpp/glm-master/doc/api/: a00002_source.html  a00003_source.html  a00007_source.html  a00008_source.html  a00009_source.html  a00010_source.html  a00011_source.html  a00012_source.html  a00013_source.html  a00014_source.html  a00015_source.html  a00016_source.html  a00017_source.html  a00018_source.html  a00019_source.html  a00020_source.html  a00021_source.html  a00022_source.html  a00023_source.html  a00024_source.html  a00025_source.html  a00026_source.html  a00027_source.html  a00028_source.html  a00029_source.html  a00030_source.html  a00031_source.html  a00032_source.html  a00033_source.html  a00034_source.html  a00035_source.html  a00036_source.html  a00037_source.html  a00038_source.html  a00039_source.html  a00040_source.html  a00041_source.html  a00042_source.html  a00043_source.html  a00044_source.html  (+197 more)
player/src/main/cpp/glm-master/glm/: common.hpp  glm.hpp
player/src/main/cpp/glm-master/glm/detail/: compute_vector_relational.hpp
player/src/main/cpp/glm-master/glm/ext/: matrix_transform.hpp
player/src/main/cpp/glm-master/glm/gtc/: type_ptr.hpp
player/src/main/cpp/glm-master/glm/gtx/: compatibility.hpp
player/src/main/cpp/glm-master/test/gtx/: gtx_load.cpp
player/src/main/cpp/handler/: Handler.cpp  Handler.h  Looper.cpp  Message.cpp  Message.h
player/src/main/cpp/include/libavutil/: ffversion.h
player/src/main/cpp/jni/: decode_jni.h  encode_jni.h  filter_jni.h  gl_render_jni.h  rtmp_jni.h  video_player_jni.h
player/src/main/cpp/oboe-master/: Doxyfile
player/src/main/cpp/oboe-master/apps/fxlab/: LICENSE
player/src/main/cpp/oboe-master/docs/reference/: _audio_stream_8h_source.html  _audio_stream_base_8h_source.html  _audio_stream_builder_8h_source.html  _audio_stream_callback_8h_source.html  _definitions_8h_source.html  _latency_tuner_8h_source.html  _oboe_8h_source.html  _result_with_value_8h_source.html  _stabilized_callback_8h_source.html  _utilities_8h_source.html  _version_8h_source.html  classoboe_1_1_audio_stream.html  classoboe_1_1_audio_stream_base.html  classoboe_1_1_audio_stream_builder.html  classoboe_1_1_audio_stream_callback.html  classoboe_1_1_audio_stream_data_callback.html  classoboe_1_1_audio_stream_error_callback.html  classoboe_1_1_default_stream_values.html  classoboe_1_1_latency_tuner.html  classoboe_1_1_oboe_globals.html  classoboe_1_1_result_with_value.html  classoboe_1_1_stabilized_callback.html  dir_768f6301d9838e45d679001914ab2803.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  structoboe_1_1_frame_timestamp.html  structoboe_1_1_stream_deleter_functor.html  structoboe_1_1_version.html
player/src/main/cpp/oboe-master/samples/audio-device/: proguard-rules.pro
player/src/main/cpp/oboe-master/samples/hello-oboe/: proguard-rules.pro
player/src/main/cpp/oboe-master/src/common/: FilterAudioStream.h
player/src/main/cpp/oboe-master/src/flowgraph/: FlowGraphNode.h
player/src/main/cpp/player/: ErrorStatusListener.h  OnErrorListener.h  OnPreparedListener.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerDefinition.h  VideoPlayerStatusCallback.cpp  VideoPlayerStatusCallback.h
player/src/main/cpp/render/: Constant.h  EglHelper.cpp  EglHelper.h  GLErrorLog.h  GLRender.cpp  GLRender.h  GLShaderUtil.cpp  GLShaderUtil.h  ShaderUtil.h
player/src/main/cpp/rtmp/: RtmpManager.cpp  RtmpManager.h
player/src/main/cpp/util/: ByteUtils.h  DLog.h  FrameUtil.h  ImageUtil.h  Thread.cpp  Thread.h  ThreadHelper.h  logging_macros.h  trace.cpp
player/src/main/java/com/yj/player/: PlayerManager.kt
player/src/main/java/com/yj/player/camera/: Camera2Loader.kt  CameraLoader.kt  ImageExt.kt  Rotation.kt  ViewExt.kt
player/src/main/java/com/yj/player/decode/: NativePlayStatusCallback.kt  NativeVideoDecoderProxy.kt  VideoDecoderImpl.kt
player/src/test/java/com/yj/player/: ExampleUnitTest.kt
(+79 files in other folders)
